--- a/plugins/clock/clock-dialog.glade
+++ b/plugins/clock/clock-dialog.glade
@@ -51,6 +51,12 @@
                           <object class="GtkComboBox" id="mode">
                             <property name="visible">True</property>
                             <property name="model">mode-model</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="cellrenderertext1"/>
+                              <attributes>
+                                <attribute name="text">0</attribute>
+                              </attributes>
+                            </child>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -88,6 +94,9 @@
                         <child>
                           <object class="GtkComboBox" id="combobox1">
                             <property name="visible">True</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="cellrenderertext2"/>
+                            </child>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -210,6 +219,9 @@
                             <child>
                               <object class="GtkComboBox" id="digital-format">
                                 <property name="visible">True</property>
+                                <child>
+                                  <object class="GtkCellRendererText" id="cellrenderertext3"/>
+                                </child>
                               </object>
                               <packing>
                                 <property name="position">1</property>
@@ -287,7 +299,6 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">0</property>
               </object>
               <packing>
                 <property name="position">0</property>
@@ -302,6 +313,9 @@
         </child>
       </object>
     </child>
+    <action-widgets>
+      <action-widget response="0">close-button</action-widget>
+    </action-widgets>
   </object>
   <object class="GtkListStore" id="mode-model">
     <columns>
