--- a/plugins/launcher/launcher-dialog.glade
+++ b/plugins/launcher/launcher-dialog.glade
@@ -29,6 +29,15 @@
       </row>
     </data>
   </object>
+  <object class="GtkListStore" id="add-store">
+    <columns>
+      <!-- column-name name -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
+  <object class="GtkTreeModelFilter" id="add-store-filter">
+    <property name="child_model">add-store</property>
+  </object>
   <object class="XfceTitledDialog" id="dialog">
     <property name="title" translatable="yes">Launcher Properties</property>
     <property name="default_width">350</property>
@@ -249,7 +258,6 @@
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">_Arrow button position:</property>
                         <property name="use_underline">True</property>
-                        <property name="mnemonic_widget">arrow-position</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -259,7 +267,6 @@
                     <child>
                       <object class="GtkComboBox" id="arrow-position">
                         <property name="visible">True</property>
-                        <property name="model">arrow-position-store</property>
                         <property name="button_sensitivity">on</property>
                         <child>
                           <object class="GtkCellRendererText" id="cellrenderertext1"/>
@@ -349,7 +356,6 @@
     <property name="destroy_with_parent">True</property>
     <property name="icon_name">applications-other</property>
     <property name="type_hint">normal</property>
-    <property name="transient_for">dialog</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox3">
@@ -369,7 +375,6 @@
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">_Name:</property>
                 <property name="use_underline">True</property>
-                <property name="mnemonic_widget">entry-name</property>
               </object>
               <packing>
                 <property name="x_options">GTK_FILL</property>
@@ -382,7 +387,6 @@
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">C_omment:</property>
                 <property name="use_underline">True</property>
-                <property name="mnemonic_widget">entry-description</property>
               </object>
               <packing>
                 <property name="top_attach">1</property>
@@ -397,7 +401,6 @@
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">_Working Directory:</property>
                 <property name="use_underline">True</property>
-                <property name="mnemonic_widget">entry-working-directory</property>
               </object>
               <packing>
                 <property name="top_attach">4</property>
@@ -445,7 +448,7 @@
               <object class="GtkFileChooserButton" id="entry-working-directory">
                 <property name="visible">True</property>
                 <property name="action">select-folder</property>
-                <property name="title" translatable="yes">Select A Working Directory</property>
+                <property name="title" translatable="yes">Select a Working Directory</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -641,7 +644,6 @@
     <property name="destroy_with_parent">True</property>
     <property name="icon_name">gtk-add</property>
     <property name="type_hint">normal</property>
-    <property name="transient_for">dialog</property>
     <property name="has_separator">False</property>
     <property name="subtitle" translatable="yes">Add a new or custom launcher entry</property>
     <child internal-child="vbox">
@@ -663,7 +665,6 @@
                     <property name="xalign">1</property>
                     <property name="label" translatable="yes">_Search:</property>
                     <property name="use_underline">True</property>
-                    <property name="mnemonic_widget">add-search</property>
                   </object>
                   <packing>
                     <property name="position">0</property>
@@ -696,6 +697,21 @@
                   <object class="GtkTreeView" id="add-treeview">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="model">add-store-filter</property>
+                    <property name="headers_visible">False</property>
+                    <property name="rules_hint">True</property>
+                    <property name="enable_search">False</property>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="treeviewcolumn1">
+                        <property name="title">Icon</property>
+                        <child>
+                          <object class="GtkCellRendererText" id="cellrenderertext1"/>
+                          <attributes>
+                            <attribute name="text">0</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
@@ -713,7 +729,7 @@
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="button5">
+              <object class="GtkButton" id="button-add">
                 <property name="label" translatable="yes">gtk-add</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -725,12 +741,14 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="button6">
+              <object class="GtkButton" id="button-custom">
                 <property name="label" translatable="yes">C_ustom</property>
                 <property name="visible">True</property>
+                <property name="sensitive">False</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="image">image1</property>
+                <property name="use_underline">True</property>
               </object>
               <packing>
                 <property name="position">1</property>
@@ -758,8 +776,8 @@
       </object>
     </child>
     <action-widgets>
-      <action-widget response="2">button5</action-widget>
-      <action-widget response="3">button6</action-widget>
+      <action-widget response="2">button-add</action-widget>
+      <action-widget response="3">button-custom</action-widget>
       <action-widget response="0">button7</action-widget>
     </action-widgets>
   </object>
@@ -767,11 +785,5 @@
     <property name="visible">True</property>
     <property name="stock">gtk-new</property>
     <property name="icon-size">4</property>
-  </object>
-  <object class="GtkSizeGroup" id="sizegroup1">
-    <property name="mode">both</property>
-    <widgets>
-      <widget name="entry-iconn"/>
-    </widgets>
   </object>
 </interface>
