--- a/plugins/launcher/launcher-dialog.glade
+++ b/plugins/launcher/launcher-dialog.glade
@@ -35,20 +35,20 @@
       <column type="gchararray"/>
       <!-- column-name name -->
       <column type="gchararray"/>
-      <!-- column-name filename -->
-      <column type="gchararray"/>
+      <!-- column-name item -->
+      <column type="GObject"/>
       <!-- column-name search -->
       <column type="gchararray"/>
     </columns>
   </object>
-  <object class="GtkListStore" id="entry-store">
+  <object class="GtkListStore" id="item-store">
     <columns>
       <!-- column-name icon -->
       <column type="gchararray"/>
       <!-- column-name name -->
       <column type="gchararray"/>
-      <!-- column-name filename -->
-      <column type="gchararray"/>
+      <!-- column-name item -->
+      <column type="GObject"/>
     </columns>
   </object>
   <object class="GtkTreeModelFilter" id="add-store-filter">
@@ -83,10 +83,10 @@
                     <property name="vscrollbar_policy">automatic</property>
                     <property name="shadow_type">etched-in</property>
                     <child>
-                      <object class="GtkTreeView" id="entry-treeview">
+                      <object class="GtkTreeView" id="item-treeview">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="model">entry-store</property>
+                        <property name="model">item-store</property>
                         <property name="headers_visible">False</property>
                         <property name="rules_hint">True</property>
                         <property name="enable_search">False</property>
@@ -94,13 +94,13 @@
                           <object class="GtkTreeViewColumn" id="treeviewcolumn2">
                             <property name="spacing">2</property>
                             <child>
-                              <object class="GtkCellRendererPixbuf" id="entryrenderericon"/>
+                              <object class="GtkCellRendererPixbuf" id="itemrenderericon"/>
                               <attributes>
                                 <attribute name="icon-name">0</attribute>
                               </attributes>
                             </child>
                             <child>
-                              <object class="GtkCellRendererText" id="entryrenderername"/>
+                              <object class="GtkCellRendererText" id="itemrenderername"/>
                               <attributes>
                                 <attribute name="markup">1</attribute>
                               </attributes>
@@ -126,7 +126,7 @@
                         <property name="spacing">6</property>
                         <property name="homogeneous">True</property>
                         <child>
-                          <object class="GtkButton" id="entry-move-up">
+                          <object class="GtkButton" id="item-move-up">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -145,7 +145,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="entry-move-down">
+                          <object class="GtkButton" id="item-move-down">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -164,7 +164,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="entry-add">
+                          <object class="GtkButton" id="item-add">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -183,7 +183,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="entry-remove">
+                          <object class="GtkButton" id="item-remove">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -202,7 +202,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="entry-edit">
+                          <object class="GtkButton" id="item-edit">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -274,7 +274,7 @@
                 </child>
                 <child>
                   <object class="GtkCheckButton" id="move-first">
-                    <property name="label" translatable="yes">Show last _used entry in panel</property>
+                    <property name="label" translatable="yes">Show last _used item in panel</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
@@ -458,7 +458,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="entry-name">
+              <object class="GtkEntry" id="item-name">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
               </object>
@@ -469,7 +469,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="entry-description">
+              <object class="GtkEntry" id="item-description">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
               </object>
@@ -482,7 +482,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkFileChooserButton" id="entry-working-directory">
+              <object class="GtkFileChooserButton" id="item-working-directory">
                 <property name="visible">True</property>
                 <property name="action">select-folder</property>
                 <property name="title" translatable="yes">Select a Working Directory</property>
@@ -496,7 +496,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkCheckButton" id="entry-terminal">
+              <object class="GtkCheckButton" id="item-terminal">
                 <property name="label" translatable="yes">Run in _terminal</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -513,7 +513,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkCheckButton" id="entry-startup-notify">
+              <object class="GtkCheckButton" id="item-startup-notify">
                 <property name="label" translatable="yes">Use _statup notification</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -562,7 +562,7 @@
                 <property name="visible">True</property>
                 <property name="spacing">6</property>
                 <child>
-                  <object class="GtkEntry" id="entry-command3">
+                  <object class="GtkEntry" id="item-command">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                   </object>
@@ -571,7 +571,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="entry-open3">
+                  <object class="GtkButton" id="item-open">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -603,7 +603,7 @@
                 <property name="xalign">0</property>
                 <property name="xscale">0</property>
                 <child>
-                  <object class="GtkButton" id="entry-iconn">
+                  <object class="GtkButton" id="item-icon">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -673,7 +673,7 @@
     </action-widgets>
   </object>
   <object class="XfceTitledDialog" id="dialog-add">
-    <property name="title" translatable="yes">Add New Entry</property>
+    <property name="title" translatable="yes">Add New Item</property>
     <property name="window_position">center-on-parent</property>
     <property name="default_width">400</property>
     <property name="default_height">400</property>
@@ -681,7 +681,7 @@
     <property name="icon_name">gtk-add</property>
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
-    <property name="subtitle" translatable="yes">Add a new or custom launcher entry</property>
+    <property name="subtitle" translatable="yes">Add a new or custom launcher item</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox4">
         <property name="visible">True</property>
